# glpk_data_analysis

./: .gitattributes  .gitignore  Mrunfile.generate  Mrunfile.solve  Untitled.ipynb  generate.batch  init.sh  mmcf2mps.py  predict_resources.ipynb  pyproject.toml  solve.batch  summary.csv
data/mmcf/aer/: jl023.json  jl049.json  jl141.json  jl147.json  jl158.json  jl188.json  jl207.json  jl209.json
data/mmcf/grid/: grid1.json  grid10.json  grid11.json  grid12.json  grid14.json  grid15.json  grid2.json  grid3.json  grid4.json  grid5.json  grid6.json  grid7.json  grid8.json  grid9.json
data/mmcf/hydro/: cinca2.json  minsil19.json  minsil7.json  navia90.json  tajo6.json
data/mmcf/jlf/: 10term.0.json  10term.100.json  10term.50.json  10term.json  15term.0.json  15term.json  alk.HALF.json  alk.TWO.json  assad1.5k.json  assad1.6k.json  assad3.4k.json  assad3.7k.json  chen0.json  chen1.json  chen2.json  chen3.json  chen4.json  (+10 more)
data/netlib/: 25fv47.mps  80bau3b.mps  adlittle.mps  afiro.mps  agg.mps  agg2.mps  agg3.mps  bandm.mps  beaconfd.mps  blend.mps  bnl1.mps  bnl2.mps  boeing1.mps  boeing2.mps  bore3d.mps  brandy.mps  capri.mps  cycle.mps  czprob.mps  d2q06c.mps  d6cube.mps  degen2.mps  degen3.mps  dfl001.mps  e226.mps  etamacro.mps  fffff800.mps  fit1d.mps  fit1p.mps  fit2d.mps  fit2p.mps  forplan.mps  ganges.mps  gfrd-pnc.mps  greenbea.mps  greenbeb.mps  grow15.mps  grow22.mps  grow7.mps  israel.mps  (+52 more)
scripts/: Dockerfile  construct_mmcf_problem.py  convert_mmcf_to_lp.sh  estimate_resources.sh  plot_network.py  requirements.txt  run_experiment.sh  summarize.py
(+378 files in other folders)
