[tool.poetry]
name = "mcfglpk-data-analysis"
version = "0.1.0"
description = ""
authors = ["David Kubek <david.kubek@gmail.com>"]
readme = "README.md"
packages = [{include = "test_set"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
statsmodels = "^0.13.5"
pulp = "^2.7.0"
toml = "^0.10.2"

[tool.poetry.group.analysis.dependencies]
jupyterlab = "^3.6.1"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
isort = "^5.12.0"
pylint = "^2.17.0"
ipython = "^8.11.0"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
